// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OrderQuantityTrend should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderQuantityTrend.title
        </div>
        <div
          class="ant-card-extra"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small"
            data-testid="filterRangePicker"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="Start date"
                readonly=""
                size="12"
                value="2023-03-20"
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <span
                aria-label="to"
                class="ant-picker-separator"
              >
                <span
                  aria-label="swap-right"
                  class="anticon anticon-swap-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="swap-right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="End date"
                readonly=""
                size="12"
                value="2023-04-19"
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                aria-label="calendar"
                class="anticon anticon-calendar"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
        data="[{\\"date\\":\\"2022-08-01\\",\\"value\\":33},{\\"date\\":\\"2022-08-02\\",\\"value\\":33},{\\"date\\":\\"2022-08-03\\",\\"value\\":33},{\\"date\\":\\"2022-08-04\\",\\"value\\":33},{\\"date\\":\\"2022-08-05\\",\\"value\\":33},{\\"date\\":\\"2022-08-06\\",\\"value\\":33},{\\"date\\":\\"2022-08-07\\",\\"value\\":33},{\\"date\\":\\"2022-08-08\\",\\"value\\":33},{\\"date\\":\\"2022-08-09\\",\\"value\\":33},{\\"date\\":\\"2022-08-10\\",\\"value\\":33},{\\"date\\":\\"2022-08-11\\",\\"value\\":33},{\\"date\\":\\"2022-08-12\\",\\"value\\":33},{\\"date\\":\\"2022-08-13\\",\\"value\\":33},{\\"date\\":\\"2022-08-14\\",\\"value\\":33},{\\"date\\":\\"2022-08-15\\",\\"value\\":33},{\\"date\\":\\"2022-08-16\\",\\"value\\":33},{\\"date\\":\\"2022-08-17\\",\\"value\\":33},{\\"date\\":\\"2022-08-18\\",\\"value\\":33},{\\"date\\":\\"2022-08-19\\",\\"value\\":33},{\\"date\\":\\"2022-08-20\\",\\"value\\":33},{\\"date\\":\\"2022-08-21\\",\\"value\\":33},{\\"date\\":\\"2022-08-22\\",\\"value\\":33},{\\"date\\":\\"2022-08-23\\",\\"value\\":33},{\\"date\\":\\"2022-08-24\\",\\"value\\":33},{\\"date\\":\\"2022-08-25\\",\\"value\\":33},{\\"date\\":\\"2022-08-26\\",\\"value\\":33},{\\"date\\":\\"2022-08-27\\",\\"value\\":33},{\\"date\\":\\"2022-08-28\\",\\"value\\":33},{\\"date\\":\\"2022-08-29\\",\\"value\\":33},{\\"date\\":\\"2022-08-30\\",\\"value\\":33}]"
        h="2.5"
        height="256"
        locale="zh-CN"
        padding="auto"
        slider="{\\"start\\":0,\\"end\\":1}"
        theme="light"
        xaxis="{\\"tickCount\\":7}"
        xfield="date"
        yfield="value"
      />
    </div>
  </div>
</div>
`;

exports[`test OrderQuantityTrend should match snapshot when request goes wrong 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderQuantityTrend.title
        </div>
        <div
          class="ant-card-extra"
        >
          <div
            class="ant-picker ant-picker-range ant-picker-small"
            data-testid="filterRangePicker"
          >
            <div
              class="ant-picker-input ant-picker-input-active"
            >
              <input
                autocomplete="off"
                placeholder="Start date"
                readonly=""
                size="12"
                value="2023-03-20"
              />
            </div>
            <div
              class="ant-picker-range-separator"
            >
              <span
                aria-label="to"
                class="ant-picker-separator"
              >
                <span
                  aria-label="swap-right"
                  class="anticon anticon-swap-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="swap-right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                placeholder="End date"
                readonly=""
                size="12"
                value="2023-04-19"
              />
            </div>
            <div
              class="ant-picker-active-bar"
              style="left: 0px; width: 0px; position: absolute;"
            />
            <span
              class="ant-picker-suffix"
            >
              <span
                aria-label="calendar"
                class="anticon anticon-calendar"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
